--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ToDoList" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ToDoList" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+    <style name="TextStyleBig">
+        <item name="android:textColor">#fefafa</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+    <style name="TextStyleSmall">
+        <item name="android:textColor">#fefafa</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
