Added room database,change background functionality,add todo functionality,checkboxes now work properly

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:textColor">#fefafa</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="SplashTheme" parent="Theme.SplashScreen.IconBackground">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen_icon</item>
+        <item name="windowSplashScreenBackground">#000000</item>
+        <item name="postSplashScreenTheme">@style/Theme.ToDoList</item>
+    </style>
 </resources>
